[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/ui/mainmenu/playgame/playgame.gd" type="Script" id=1]

[node name="PlayGame" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 9
size_flags_vertical = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateGameMenu" type="VBoxContainer" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="PortLine" type="HBoxContainer" parent="CreateGameMenu"]
margin_right = 640.0
margin_bottom = 32.0

[node name="Port" type="Label" parent="CreateGameMenu/PortLine"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 27.0
text = "Port"

[node name="PortField" type="LineEdit" parent="CreateGameMenu/PortLine"]
margin_left = 34.0
margin_right = 640.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "42420"
caret_blink = true
caret_blink_speed = 0.5

[node name="Name" type="HBoxContainer" parent="CreateGameMenu"]
margin_right = 58.0
margin_bottom = 40.0

[node name="NameField" type="LineEdit" parent="CreateGameMenu/Name"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Create" type="Button" parent="CreateGameMenu"]
margin_top = 36.0
margin_right = 640.0
margin_bottom = 64.0
text = "CREATE"

[node name="Back" type="Button" parent="CreateGameMenu"]
margin_right = 12.0
margin_bottom = 28.0
text = "BACK"

[node name="JoinGameMenu" type="VBoxContainer" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostnameLine" type="HBoxContainer" parent="JoinGameMenu"]
margin_right = 640.0
margin_bottom = 32.0

[node name="Hostname" type="Label" parent="JoinGameMenu/HostnameLine"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 27.0
text = "Hostname"

[node name="HostnameField" type="LineEdit" parent="JoinGameMenu/HostnameLine"]
margin_left = 78.0
margin_right = 640.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "localhost"
caret_blink = true
caret_blink_speed = 0.5

[node name="Port" type="HBoxContainer" parent="JoinGameMenu"]
margin_top = 36.0
margin_right = 640.0
margin_bottom = 68.0

[node name="Port" type="Label" parent="JoinGameMenu/Port"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 27.0
text = "Port"

[node name="PortField" type="LineEdit" parent="JoinGameMenu/Port"]
margin_left = 34.0
margin_right = 640.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "42420"
caret_blink = true
caret_blink_speed = 0.5

[node name="Name" type="HBoxContainer" parent="JoinGameMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="NameField" type="LineEdit" parent="JoinGameMenu/Name"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Connect" type="Button" parent="JoinGameMenu"]
margin_top = 72.0
margin_right = 640.0
margin_bottom = 100.0
text = "CONNECT"

[node name="Back" type="Button" parent="JoinGameMenu"]
margin_right = 12.0
margin_bottom = 28.0
text = "BACK"

[node name="PlayGameMenu" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Tutorial" type="Button" parent="PlayGameMenu"]
margin_right = 640.0
margin_bottom = 28.0
disabled = true
text = "TUTORIAL"
flat = true

[node name="JoinGame" type="Button" parent="PlayGameMenu"]
margin_top = 36.0
margin_right = 640.0
margin_bottom = 64.0
text = "JOIN GAME"
flat = true

[node name="CreateGame" type="Button" parent="PlayGameMenu"]
margin_top = 72.0
margin_right = 640.0
margin_bottom = 100.0
text = "CREATE GAME"
flat = true

[node name="Back" type="Button" parent="PlayGameMenu"]
margin_top = 108.0
margin_right = 640.0
margin_bottom = 136.0
text = "BACK"
flat = true
[connection signal="pressed" from="CreateGameMenu/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CreateGameMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="JoinGameMenu/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="JoinGameMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="PlayGameMenu/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="PlayGameMenu/CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="PlayGameMenu/Back" to="." method="_on_Back_pressed"]
